--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@
 
 ################################################################
 # Select image from https://hub.docker.com/_/php/
-image:  monogramm/docker-dolibarr
+image:  tuxgasy/dolibarr:14
 ################################################################
 # Set any variables we need
 variables:
@@ -38,7 +38,9 @@ variables:
 # Defined Pipeline Stages
 stages:
     - quality
-    - tests
+    - tests-basic
+#     - tests-advanced
+#     - tests-variants
     - deploy
 
 ################################################################
@@ -46,7 +48,6 @@ stages:
 ################################################################
 .functionnal:   &functionnal
 #    when:       manual
-    stage:      tests
     tags:       ['Dedicated']
     retry:      2
     services:
@@ -75,37 +76,55 @@ stages:
         - curl -s https://raw.githubusercontent.com/BadPixxel/Php-Sdk/main/ci/composer.sh | bash
         ################################################################################
         # Execute Bootstrap file
-        - php travis/bootstrap.php
+        - php ci/bootstrap.php
         # Show PhpUnit Version
         - splash/vendor/phpunit/phpunit/phpunit --version
         # Run PhpUnit Main Local Testsuite
-        - splash/vendor/phpunit/phpunit/phpunit -c travis/phpunit.xml.dist --log-junit $CI_PROJECT_DIR/local-report.xml --testsuite=Local
-        - splash/vendor/phpunit/phpunit/phpunit -c travis/phpunit.xml.dist --log-junit $CI_PROJECT_DIR/full-report.xml
+        - splash/vendor/phpunit/phpunit/phpunit  --testsuite=Init               --log-junit $CI_PROJECT_DIR/local-report.xml
+        - splash/vendor/phpunit/phpunit/phpunit  --testsuite=$PHPUNIT_SUITE     --log-junit $CI_PROJECT_DIR/full-report.xml
 
-Dol-14-Php-7.4:
+.functionnal-basic:   &functionnal-basic
+    <<: *functionnal
+    stage:          tests-basic
+    variables:
+        PHPUNIT_SUITE:   Basics
+
+.functionnal-advanced:   &functionnal-advanced
+    <<: *functionnal
+    stage:          tests-advanced
+    variables:
+        PHPUNIT_SUITE:   Advanced
+
+.functionnal-variants:   &functionnal-variants
+    <<: *functionnal
+    stage:          tests-variants
+    variables:
+        PHPUNIT_SUITE:   Variants
+
+################################################################
+# Functional Tests Map
+################################################################
+
+Dol-14-Basics:
     image:          tuxgasy/dolibarr:14
-    <<: *functionnal
+    <<: *functionnal-basic
 
-Dol-13-Php-7.3:
+Dol-13-Basics:
     image:          tuxgasy/dolibarr:13
-    <<: *functionnal
+    <<: *functionnal-basic
 
-Dol-12-Php-7.2:
-    image:          tuxgasy/dolibarr:12
-    <<: *functionnal
+Dol-10-Basics:
+    image:          tuxgasy/dolibarr:13
+    <<: *functionnal-basic
 
-Dol-10-Php-7.2:
-    image:          tuxgasy/dolibarr:10
-    <<: *functionnal
-
-Dol-9-Php-7.2:
+Dol-9-Basics:
     image:          tuxgasy/dolibarr:9
-    <<: *functionnal
+    <<: *functionnal-basic
 
-Dol-Dev-Php-7.2:
+Dol-Dev-Basics:
     image:          tuxgasy/dolibarr:develop
     allow_failure:  true
-    <<: *functionnal
+    <<: *functionnal-basic
 
 
 ################################################################
