--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,10 +59,12 @@ services:
     ################################################################################
     # Dolibarr Latest (Develop)
     dolibarr:
-        image: tuxgasy/dolibarr:develop
-        container_name: dolibarr-latest
+#         image: tuxgasy/dolibarr:develop
+        image: tuxgasy/dolibarr:14
+        container_name: latest.dolibarr.local
         depends_on:
             - mysql
+        working_dir:    /var/www/html/custom
         environment:
             - DOLI_DB_TYPE=mysqli
             - DOLI_DB_HOST=mysql
@@ -87,58 +89,58 @@ services:
 
     ################################################################################
     # Dolibarr V14
-    dol-14:
-        image: tuxgasy/dolibarr:14
-        container_name: dolibarr-v14
-        depends_on:
-            - mysql
-        links:
-            - mysql
-        environment:
-            - "DOLI_DB_TYPE=mysqli"
-            - "DOLI_DB_HOST=mysql"
-            - "DOLI_DB_NAME=dolibarr14"
-            - "DOLI_DB_USER=root"
-            - "DOLI_DB_PASSWORD=dolibarr"
-            - "DOLI_ADMIN_LOGIN=Admin"
-            - "PHP_MEMORY_LIMIT=-1"
-            - SPLASH_WS_ID=ThisIsDol14Key
-            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
-        volumes:
-            - "./:/var/www/html/custom/"
-            - "./.git/:/var/www/html/custom/.git/"
-        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
-        hostname: v14.dolibarr.local
-        networks:
-            dolibarr:      { ipv4_address: 172.100.0.14 }
-            splashsync:    { aliases: [ v14.dolibarr.local ] }
+#     dol-14:
+#         image: tuxgasy/dolibarr:14
+#         container_name: dolibarr-v14
+#         depends_on:
+#             - mysql
+#         links:
+#             - mysql
+#         environment:
+#             - "DOLI_DB_TYPE=mysqli"
+#             - "DOLI_DB_HOST=mysql"
+#             - "DOLI_DB_NAME=dolibarr14"
+#             - "DOLI_DB_USER=root"
+#             - "DOLI_DB_PASSWORD=dolibarr"
+#             - "DOLI_ADMIN_LOGIN=Admin"
+#             - "PHP_MEMORY_LIMIT=-1"
+#             - SPLASH_WS_ID=ThisIsDol14Key
+#             - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
+#             - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
+#         volumes:
+#             - "./:/var/www/html/custom/"
+#             - "./.git/:/var/www/html/custom/.git/"
+#         entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
+#         hostname: v14.dolibarr.local
+#         networks:
+#             dolibarr:      { ipv4_address: 172.100.0.14 }
+#             splashsync:    { aliases: [ v14.dolibarr.local ] }
 
     ################################################################################
     # Dolibarr V13
-    dol-13:
-        image: tuxgasy/dolibarr:13
-        container_name: dolibarr-v13
-        depends_on:
-            - mysql
-        environment:
-            - "DOLI_DB_TYPE=mysqli"
-            - "DOLI_DB_HOST=mysql"
-            - "DOLI_DB_NAME=dolibarr13"
-            - "DOLI_DB_USER=root"
-            - "DOLI_DB_PASSWORD=dolibarr"
-            - "DOLI_ADMIN_LOGIN=Admin"
-            - "PHP_MEMORY_LIMIT=-1"
-            - SPLASH_WS_ID=ThisIsDol13Key
-            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
-        volumes:
-            - "./:/var/www/html/custom/"
-        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
-        hostname: v13.dolibarr.local
-        networks:
-            dolibarr:      { ipv4_address: 172.100.0.13 }
-            splashsync:    { aliases: [ v13.dolibarr.local ] }
+#     dol-13:
+#         image: tuxgasy/dolibarr:13
+#         container_name: dolibarr-v13
+#         depends_on:
+#             - mysql
+#         environment:
+#             - "DOLI_DB_TYPE=mysqli"
+#             - "DOLI_DB_HOST=mysql"
+#             - "DOLI_DB_NAME=dolibarr13"
+#             - "DOLI_DB_USER=root"
+#             - "DOLI_DB_PASSWORD=dolibarr"
+#             - "DOLI_ADMIN_LOGIN=Admin"
+#             - "PHP_MEMORY_LIMIT=-1"
+#             - SPLASH_WS_ID=ThisIsDol13Key
+#             - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
+#             - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
+#         volumes:
+#             - "./:/var/www/html/custom/"
+#         entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
+#         hostname: v13.dolibarr.local
+#         networks:
+#             dolibarr:      { ipv4_address: 172.100.0.13 }
+#             splashsync:    { aliases: [ v13.dolibarr.local ] }
 
 #    ################################################################################
 #    # Dolibarr V12
@@ -197,37 +199,37 @@ services:
            
     ################################################################################
     # Dolibarr V10
-    dol-10:
-        image: tuxgasy/dolibarr:10
-        container_name: dolibarr-v10
-        depends_on:
-            - mysql
-        environment:
-            - "DOLI_DB_TYPE=mysqli"
-            - "DOLI_DB_HOST=mysql"
-            - "DOLI_DB_NAME=dolibarr10"
-            - "DOLI_DB_USER=root"
-            - "DOLI_DB_PASSWORD=dolibarr"
-            - "DOLI_ADMIN_LOGIN=Admin"
-            - "DOLI_MODULES=modSplash,modCommande,modProduct,modCategorie,modStock,modBanque,modSociete,modFacture"
-            - "PHP_MEMORY_LIMIT=-1"
-            - SPLASH_WS_ID=ThisIsDol10Key
-            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
-        volumes:
-            - "./:/var/www/html/custom/"
-            - "./.git/:/var/www/html/custom/.git/"
-        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
-        hostname: v10.dolibarr.local
-        networks:
-            dolibarr:      { ipv4_address: 172.100.0.10 }
-            splashsync:    { aliases: [ v10.dolibarr.local ] }
+#     dol-10:
+#         image: tuxgasy/dolibarr:10
+#         container_name: dolibarr-v10
+#         depends_on:
+#             - mysql
+#         environment:
+#             - "DOLI_DB_TYPE=mysqli"
+#             - "DOLI_DB_HOST=mysql"
+#             - "DOLI_DB_NAME=dolibarr10"
+#             - "DOLI_DB_USER=root"
+#             - "DOLI_DB_PASSWORD=dolibarr"
+#             - "DOLI_ADMIN_LOGIN=Admin"
+#             - "DOLI_MODULES=modSplash,modCommande,modProduct,modCategorie,modStock,modBanque,modSociete,modFacture"
+#             - "PHP_MEMORY_LIMIT=-1"
+#             - SPLASH_WS_ID=ThisIsDol10Key
+#             - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
+#             - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
+#         volumes:
+#             - "./:/var/www/html/custom/"
+#             - "./.git/:/var/www/html/custom/.git/"
+#         entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
+#         hostname: v10.dolibarr.local
+#         networks:
+#             dolibarr:      { ipv4_address: 172.100.0.10 }
+#             splashsync:    { aliases: [ v10.dolibarr.local ] }
            
     ################################################################################
     # Splash Toolkit Container   
     toolkit:
         image: 'splashsync/toolkit'
-        container_name: dolibarr-toolkit
+        container_name: toolkit.dolibarr.local
         logging: { driver: "none" }
         volumes:
             # Specify Local Configuration File
@@ -242,7 +244,7 @@ services:
     # PhpMyAdmin Container
     phpmyadmin:
         image: phpmyadmin/phpmyadmin:5
-        container_name: dolibarr-phpmyadmin
+        container_name: phpmyadmin.dolibarr.local
         logging: { driver: "none" }
         depends_on:
             - mysql
