--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,26 +105,56 @@ stages:
 # Functional Tests Map
 ################################################################
 
+################################################################
+# Dolibarr V14
 Dol-14-Basics:
     image:          tuxgasy/dolibarr:14
     <<: *functionnal-basic
+Dol-14-Advanced:
+    image:          tuxgasy/dolibarr:14
+    <<: *functionnal-advanced
+Dol-14-Variants:
+    image:          tuxgasy/dolibarr:14
+    <<: *functionnal-variants
 
+################################################################
+# Dolibarr V13
 Dol-13-Basics:
     image:          tuxgasy/dolibarr:13
     <<: *functionnal-basic
 
+################################################################
+# Dolibarr V10
 Dol-10-Basics:
     image:          tuxgasy/dolibarr:13
     <<: *functionnal-basic
 
+################################################################
+# Dolibarr V9
 Dol-9-Basics:
     image:          tuxgasy/dolibarr:9
     <<: *functionnal-basic
+Dol-9-Advanced:
+    image:          tuxgasy/dolibarr:9
+    <<: *functionnal-advanced
+Dol-9-Variants:
+    image:          tuxgasy/dolibarr:9
+    <<: *functionnal-variants
 
+################################################################
+# Dolibarr V9
 Dol-Dev-Basics:
     image:          tuxgasy/dolibarr:develop
     allow_failure:  true
     <<: *functionnal-basic
+Dol-Dev-Advanced:
+    image:          tuxgasy/dolibarr:develop
+    allow_failure:  true
+    <<: *functionnal-advanced
+Dol-Dev-Variants:
+    image:          tuxgasy/dolibarr:develop
+    allow_failure:  true
+    <<: *functionnal-variants
 
 
 ################################################################
