WIP: Optimize Test Sequences

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,8 +39,8 @@ variables:
 stages:
     - quality
     - basic
-#     - advanced
-#     - variants
+    - advanced
+    - variants
     - deploy
 
 ################################################################
