WIP: Optimize Test Sequences

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,8 +59,7 @@ services:
     ################################################################################
     # Dolibarr Latest (Develop)
     dolibarr:
-#         image: tuxgasy/dolibarr:develop
-        image: tuxgasy/dolibarr:14
+        image: tuxgasy/dolibarr:develop
         container_name: latest.dolibarr.local
         depends_on:
             - mysql
@@ -89,32 +88,32 @@ services:
 
     ################################################################################
     # Dolibarr V14
-#     dol-14:
-#         image: tuxgasy/dolibarr:14
-#         container_name: dolibarr-v14
-#         depends_on:
-#             - mysql
-#         links:
-#             - mysql
-#         environment:
-#             - "DOLI_DB_TYPE=mysqli"
-#             - "DOLI_DB_HOST=mysql"
-#             - "DOLI_DB_NAME=dolibarr14"
-#             - "DOLI_DB_USER=root"
-#             - "DOLI_DB_PASSWORD=dolibarr"
-#             - "DOLI_ADMIN_LOGIN=Admin"
-#             - "PHP_MEMORY_LIMIT=-1"
-#             - SPLASH_WS_ID=ThisIsDol14Key
-#             - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-#             - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
-#         volumes:
-#             - "./:/var/www/html/custom/"
-#             - "./.git/:/var/www/html/custom/.git/"
-#         entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
-#         hostname: v14.dolibarr.local
-#         networks:
-#             dolibarr:      { ipv4_address: 172.100.0.14 }
-#             splashsync:    { aliases: [ v14.dolibarr.local ] }
+    dol-14:
+        image: tuxgasy/dolibarr:14
+        container_name: dolibarr-v14
+        depends_on:
+            - mysql
+        links:
+            - mysql
+        environment:
+            - "DOLI_DB_TYPE=mysqli"
+            - "DOLI_DB_HOST=mysql"
+            - "DOLI_DB_NAME=dolibarr14"
+            - "DOLI_DB_USER=root"
+            - "DOLI_DB_PASSWORD=dolibarr"
+            - "DOLI_ADMIN_LOGIN=Admin"
+            - "PHP_MEMORY_LIMIT=-1"
+            - SPLASH_WS_ID=ThisIsDol14Key
+            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
+            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
+        volumes:
+            - "./:/var/www/html/custom/"
+            - "./.git/:/var/www/html/custom/.git/"
+        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
+        hostname: v14.dolibarr.local
+        networks:
+            dolibarr:      { ipv4_address: 172.100.0.14 }
+            splashsync:    { aliases: [ v14.dolibarr.local ] }
 
     ################################################################################
     # Dolibarr V13
@@ -199,31 +198,31 @@ services:
            
     ################################################################################
     # Dolibarr V10
-#     dol-10:
-#         image: tuxgasy/dolibarr:10
-#         container_name: dolibarr-v10
-#         depends_on:
-#             - mysql
-#         environment:
-#             - "DOLI_DB_TYPE=mysqli"
-#             - "DOLI_DB_HOST=mysql"
-#             - "DOLI_DB_NAME=dolibarr10"
-#             - "DOLI_DB_USER=root"
-#             - "DOLI_DB_PASSWORD=dolibarr"
-#             - "DOLI_ADMIN_LOGIN=Admin"
-#             - "DOLI_MODULES=modSplash,modCommande,modProduct,modCategorie,modStock,modBanque,modSociete,modFacture"
-#             - "PHP_MEMORY_LIMIT=-1"
-#             - SPLASH_WS_ID=ThisIsDol10Key
-#             - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
-#             - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
-#         volumes:
-#             - "./:/var/www/html/custom/"
-#             - "./.git/:/var/www/html/custom/.git/"
-#         entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
-#         hostname: v10.dolibarr.local
-#         networks:
-#             dolibarr:      { ipv4_address: 172.100.0.10 }
-#             splashsync:    { aliases: [ v10.dolibarr.local ] }
+    dol-10:
+        image: tuxgasy/dolibarr:10
+        container_name: dolibarr-v10
+        depends_on:
+            - mysql
+        environment:
+            - "DOLI_DB_TYPE=mysqli"
+            - "DOLI_DB_HOST=mysql"
+            - "DOLI_DB_NAME=dolibarr10"
+            - "DOLI_DB_USER=root"
+            - "DOLI_DB_PASSWORD=dolibarr"
+            - "DOLI_ADMIN_LOGIN=Admin"
+            - "DOLI_MODULES=modSplash,modCommande,modProduct,modCategorie,modStock,modBanque,modSociete,modFacture"
+            - "PHP_MEMORY_LIMIT=-1"
+            - SPLASH_WS_ID=ThisIsDol10Key
+            - SPLASH_WS_KEY=ThisTokenIsNotSoSecretChangeIt
+            - SPLASH_WS_HOST=http://172.100.0.100/ws/soap
+        volumes:
+            - "./:/var/www/html/custom/"
+            - "./.git/:/var/www/html/custom/.git/"
+        entrypoint: sh /var/www/html/custom/docker/docker-entrypoint.sh
+        hostname: v10.dolibarr.local
+        networks:
+            dolibarr:      { ipv4_address: 172.100.0.10 }
+            splashsync:    { aliases: [ v10.dolibarr.local ] }
            
     ################################################################################
     # Splash Toolkit Container   
