--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
     },
 
     "require": {
-        "php":                              "^7.2",
+        "php":                              "^7.2|^8.0",
         "splash/phpcore":                   "@stable"
     },
     
