WIP: Advanced Pack

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
         "preferred-install":                "dist",
         "platform": {
             "php":                          "7.2.0"
+        },
+        "allow-plugins": {
+            "phpro/grumphp": true
         }
     },
     
