--- a/grumphp.yml
+++ b/grumphp.yml
@@ -38,7 +38,7 @@ parameters:
     # For Building Splash Module
     mod-src:            '/splash'
     mod-target:         '/splash/'
-    mod-file:           "module_splash-1.15.1"
+    mod-file:           "module_splash-1.15.2-dev"
 
     # For Building Splash Manifest
     yml-enable:         false
