--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,7 +6,7 @@
     backupStaticAttributes      = "false"
     colors                      = "true"
     convertErrorsToExceptions   = "true"
-    convertWarningsToExceptions = "true"
+    convertWarningsToExceptions = "false"
     convertNoticesToExceptions  = "false"
     processIsolation            = "false"
     stopOnFailure               = "true"
