--- a/composer.json
+++ b/composer.json
@@ -42,12 +42,12 @@
 
     "require": {
         "php":                              "^7.4|^8.0",
-        "splash/phpcore":                   "1.0.x-dev"
+        "splash/phpcore":                   "dev-master"
     },
     
     "require-dev": {
         "splash/console":                   "dev-master",
-        "badpixxel/php-sdk":                "~1.0"
+        "badpixxel/php-sdk":                "~2.0"
     },
 
     "archive": {
