WIP: Migrate to PhpCore V2 - PhpUnit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,6 +94,7 @@ services:
             - mysql
         links:
             - mysql
+        working_dir:    /var/www/html/custom
         environment:
             - "DOLI_DB_TYPE=mysqli"
             - "DOLI_DB_HOST=mysql"
